test/integration/bad/includes/else.inc
// else in other file
else {
    x = 25;
}
